Add payload return value config to dxl in and remove is-utf8 dep

--- a/dxl.html
+++ b/dxl.html
@@ -35,7 +35,8 @@
     defaults: {
       name: {value:""},
       topic: {value:"", required:true},
-      client: {type:"dxl-client", required:true}
+      client: {type:"dxl-client", required:true},
+      ret: {value:"txt"}
     },
     color: "#d8bfd8",
     inputs: 0,
@@ -62,6 +63,14 @@
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
+    </div>
+    <div class="form-row">
+        <label for="node-input-ret"><i class="fa fa-arrow-left"></i> Return</span></label>
+        <select type="text" id="node-input-ret" style="width:70%;">
+            <option value="txt">a UTF-8 string</option>
+            <option value="bin">a binary buffer</option>
+            <option value="obj">a parsed JSON object</option>
+       </select>
     </div>
 </script>
 
@@ -145,12 +154,12 @@
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
     </div>
-        <div class="form-row">
+    <div class="form-row">
         <label for="node-input-ret"><i class="fa fa-arrow-left"></i> Return</span></label>
         <select type="text" id="node-input-ret" style="width:70%;">
-        <option value="txt">a UTF-8 string</option>
-        <option value="bin">a binary buffer</option>
-        <option value="obj">a parsed JSON object</option>
+            <option value="txt">a UTF-8 string</option>
+            <option value="bin">a binary buffer</option>
+            <option value="obj">a parsed JSON object</option>
         </select>
     </div>
 </script>
