--- a/dxl.html
+++ b/dxl.html
@@ -9,7 +9,7 @@
     outputs: 1,
     icon: "bridge.png",
     label: function() {
-      return this.name || "dxl";
+      return this.name || "dxl client";
     }
   });
 </script>
@@ -43,7 +43,7 @@
     outputs: 1,
     icon: "bridge.png",
     label: function() {
-      return this.name||this.topic||"dxl";
+      return this.name||this.topic||"dxl event";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
@@ -92,7 +92,7 @@
     icon: "bridge.png",
     align: "right",
     label: function() {
-      return this.name||this.topic||"dxl";
+      return this.name||this.topic||"dxl event";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
@@ -131,9 +131,9 @@
     color: "rgb(231, 231, 174)",
     inputs: 1,
     outputs: 1,
-    icon: "bridge-dash.png",
+    icon: "white-globe.png",
     label: function() {
-      return this.name||this.topic||"dxlreq";
+      return this.name||this.topic||"dxl request";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
@@ -182,7 +182,7 @@
     outputs: 1,
     icon: "bridge.png",
     label: function() {
-      return this.name||this.topic||"dxl";
+      return this.name||this.topic||"dxl service";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
@@ -230,7 +230,7 @@
     icon: "bridge.png",
     align: "right",
     label: function() {
-      return this.name||this.topic||"dxl";
+      return this.name||this.topic||"dxl response";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
