--- a/dxl.html
+++ b/dxl.html
@@ -169,26 +169,142 @@
 </script>
 
 <script type="text/javascript">
+(function() {
+  var payloadTypes = [
+    {v:"txt",t:"a UTF-8 string"},
+    {v:"bin",t:"a binary buffer"},
+    {v:"obj",t:"a parsed JSON object"}
+  ];
+
   RED.nodes.registerType('dxl-service in',{
     category: 'input',
     defaults: {
       name: {value:""},
       serviceType: {value:"", required:true},
-      topic: {value:"", required:true},
       client: {type:"dxl-client", required:true},
-      ret: {value:"txt"}
+      rules: {value:[{payloadType:"txt", topic:""}]},
+      outputs: {value:1}
     },
     color: "#d8bfd8",
     inputs: 0,
     outputs: 1,
+    outputLabels: function(index) {
+      var rule = this.rules[index];
+      var label = "";
+      if (rule) {
+        return rule.topic;
+      }
+    },
     icon: "bridge.png",
     label: function() {
       return this.name||this.topic||"dxl service";
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
+    },
+    oneditprepare: function() {
+      var node = this;
+      var outputCount = $("#node-input-outputs").val("{}");
+
+      $("#node-input-rule-container").css('min-height','250px').css('min-width','450px').editableList({
+        addItem: function(container,i,opt) {
+          if (!opt.hasOwnProperty('r')) {
+            opt.r = {};
+          }
+          var rule = opt.r;
+          if (!rule.hasOwnProperty('payloadType')) {
+            rule.payloadType = 'txt';
+          }
+          if (!opt.hasOwnProperty('i')) {
+            opt._i = Math.floor((0x99999-0x10000)*Math.random()).toString(16);
+          }
+
+          var row1 = $('<div/>').appendTo(container);
+          var row2 = $('<div/>',{style:"margin-top:8px;"}).appendTo(container);
+
+          $('<div/>',{style:"display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;"})
+              .text("Topic")
+              .appendTo(row1);
+          var topicValue = $('<input/>',{class:"node-input-rule-topic-value",type:"text"}).appendTo(row1);
+
+          $('<div/>',{style:"display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;"})
+              .text("Payload type")
+              .appendTo(row2);
+          var payloadTypeField = $('<select/>',{style:"width:200px; text-align: center;"}).appendTo(row2);
+          for (var d in payloadTypes) {
+            payloadTypeField.append($("<option></option>").val(payloadTypes[d].v).text(payloadTypes[d].t));
+          }
+
+          var finalspan = $('<span/>',{style:"float: right;margin-top: 6px;"}).appendTo(row1);
+          finalspan.append(' &#8594; <span class="node-input-rule-index">'+(i+1)+'</span> ');
+          payloadTypeField.val(rule.payloadType);
+          if (typeof rule.topic !== "undefined") {
+            topicValue.val(rule.topic);
+          }
+          payloadTypeField.change();
+
+          var currentOutputs = JSON.parse(outputCount.val()||"{}");
+          currentOutputs[opt.hasOwnProperty('i')?opt.i:opt._i] = i;
+          outputCount.val(JSON.stringify(currentOutputs));
+        },
+        removeItem: function(opt) {
+          var currentOutputs = JSON.parse(outputCount.val()||"{}");
+          if (opt.hasOwnProperty('i')) {
+            currentOutputs[opt.i] = -1;
+          } else {
+            delete currentOutputs[opt._i];
+          }
+          var rules = $("#node-input-rule-container").editableList('items');
+          rules.each(function(i) {
+            $(this).find(".node-input-rule-index").html(i+1);
+            var data = $(this).data('data');
+            currentOutputs[data.hasOwnProperty('i')?data.i:data._i] = i;
+          });
+          outputCount.val(JSON.stringify(currentOutputs));
+        },
+        sortItems: function(rules) {
+          var currentOutputs = JSON.parse(outputCount.val()||"{}");
+          var rules = $("#node-input-rule-container").editableList('items');
+          rules.each(function(i) {
+            $(this).find(".node-input-rule-index").html(i+1);
+            var data = $(this).data('data');
+            currentOutputs[data.hasOwnProperty('i')?data.i:data._i] = i;
+          });
+          outputCount.val(JSON.stringify(currentOutputs));
+        },
+        sortable: true,
+        removable: true
+      });
+
+      for (var i=0;i<this.rules.length;i++) {
+        var rule = this.rules[i];
+        $("#node-input-rule-container").editableList('addItem',{r:rule,i:i});
+      }
+    },
+    oneditsave: function() {
+      var rules = $("#node-input-rule-container").editableList('items');
+      var node = this;
+      node.rules = [];
+      rules.each(function(i) {
+        var rule = $(this);
+        var type = rule.find("select").val();
+        var r = {payloadType:type};
+        r.topic = rule.find(".node-input-rule-topic-value").val();
+        node.rules.push(r);
+      });
+    },
+    oneditresize: function(size) {
+      var rows = $("#dialog-form>div:not(.node-input-rule-container-row)");
+      var height = size.height;
+      for (var i=0;i<rows.size();i++) {
+        height -= $(rows[i]).outerHeight(true);
+      }
+      var editorRow = $("#dialog-form>div.node-input-rule-container-row");
+      height -= (parseInt(editorRow.css("marginTop"))+parseInt(editorRow.css("marginBottom")));
+      $("#node-input-rule-container").editableList('height',height);
     }
   });
+})();
 </script>
 
 <script type="text/x-red" data-template-name="dxl-service in">
@@ -197,24 +313,16 @@
         <input type="text" id="node-input-client" placeholder="Client">
     </div>
     <div class="form-row">
-        <label for="node-input-topic"><i class="fa fa-tasks"></i> Topic</label>
-        <input type="text" id="node-input-topic" placeholder="Topic">
-    </div>
-    <div class="form-row">
         <label for="node-input-serviceType"><i class="fa fa-tag"></i> Service Type</label>
         <input type="text" id="node-input-serviceType" placeholder="Service Type">
     </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name">
+        <input type="hidden" id="node-input-outputs"/>
     </div>
-    <div class="form-row">
-        <label for="node-input-ret"><i class="fa fa-arrow-left"></i> Return</span></label>
-        <select type="text" id="node-input-ret" style="width:70%;">
-            <option value="txt">a UTF-8 string</option>
-            <option value="bin">a binary buffer</option>
-            <option value="obj">a parsed JSON object</option>
-       </select>
+    <div class="form-row node-input-rule-container-row">
+        <ol id="node-input-rule-container"></ol>
     </div>
 </script>
 
