Allow dxlTopic for send request and event to come from msg

--- a/dxl.html
+++ b/dxl.html
@@ -83,7 +83,7 @@
     category: 'output',
     defaults: {
       name: {value:""},
-      topic: {value:"", required:true},
+      topic: {value:""},
       client: {type:"dxl-client", required:true}
     },
     color: "#d8bfd8",
@@ -124,7 +124,7 @@
     category: 'function',
     defaults: {
       name: {value:""},
-      topic: {value:"", required:true},
+      topic: {value:""},
       client: {type:"dxl-client", required:true},
       ret: {value:"txt"}
     },
