--- a/dxl.html
+++ b/dxl.html
@@ -96,6 +96,22 @@
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
+    },
+    onadd: function() {
+      if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
+        var clientConfigId = '';
+        var configCount = 0;
+        RED.nodes.eachConfig(function(n) {
+          if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
+              (n.type === 'dxl-client')) {
+            clientConfigId = n.id;
+            configCount++;
+          }
+        })
+        if (configCount === 1) {
+          this.client = clientConfigId;
+        }
+      }
     }
   });
 </script>
@@ -137,6 +153,22 @@
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
+    },
+    onadd: function() {
+      if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
+        var clientConfigId = '';
+        var configCount = 0;
+        RED.nodes.eachConfig(function(n) {
+          if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
+              (n.type === 'dxl-client')) {
+            clientConfigId = n.id;
+            configCount++;
+          }
+        })
+        if (configCount === 1) {
+          this.client = clientConfigId;
+        }
+      }
     }
   });
 </script>
@@ -347,6 +379,22 @@
     },
     labelStyle: function() {
       return this.name?"node_label_italic":"";
+    },
+    onadd: function() {
+      if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
+        var clientConfigId = '';
+        var configCount = 0;
+        RED.nodes.eachConfig(function(n) {
+          if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
+              (n.type === 'dxl-client')) {
+            clientConfigId = n.id;
+            configCount++;
+          }
+        })
+        if (configCount === 1) {
+          this.client = clientConfigId;
+        }
+      }
     }
   });
 </script>
