--- a/dxl.html
+++ b/dxl.html
@@ -1,17 +1,17 @@
 <script type="text/javascript">
-  RED.nodes.registerType('dxl-client',{
+  RED.nodes.registerType('dxl-client', {
     category: 'config',
     defaults: {
-      configfile: {value:"", required:true},
-      name: {value:""}
+      configfile: {value: '', required: true},
+      name: {value: ''}
     },
     inputs: 0,
     outputs: 1,
-    icon: "bridge.png",
-    label: function() {
-      return this.name || "dxl client";
+    icon: 'bridge.png',
+    label: function () {
+      return this.name || 'dxl client'
     }
-  });
+  })
 </script>
 
 <script type="text/x-red" data-template-name="dxl-client">
@@ -30,25 +30,25 @@
 </script>
 
 <script type="text/javascript">
-  RED.nodes.registerType('dxl-event in',{
+  RED.nodes.registerType('dxl-event in', {
     category: 'input',
     defaults: {
-      name: {value:""},
-      topic: {value:"", required:true},
-      client: {type:"dxl-client", required:true},
-      ret: {value:"txt"}
+      name: {value: ''},
+      topic: {value: '', required: true},
+      client: {type: 'dxl-client', required: true},
+      ret: {value: 'txt'}
     },
-    color: "#d8bfd8",
+    color: '#d8bfd8',
     inputs: 0,
     outputs: 1,
-    icon: "bridge.png",
-    label: function() {
-      return this.name||this.topic||"dxl event";
+    icon: 'bridge.png',
+    label: function () {
+      return this.name || this.topic || 'dxl event'
     },
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? 'node_label_italic' : ''
     }
-  });
+  })
 </script>
 
 <script type="text/x-red" data-template-name="dxl-event in">
@@ -79,41 +79,41 @@
 </script>
 
 <script type="text/javascript">
-  RED.nodes.registerType('dxl-event out',{
+  RED.nodes.registerType('dxl-event out', {
     category: 'output',
     defaults: {
-      name: {value:""},
-      topic: {value:""},
-      client: {type:"dxl-client", required:true}
+      name: {value: ''},
+      topic: {value: ''},
+      client: {type: 'dxl-client', required: true}
     },
-    color: "#d8bfd8",
+    color: '#d8bfd8',
     inputs: 1,
     outputs: 0,
-    icon: "bridge.png",
-    align: "right",
-    label: function() {
-      return this.name||this.topic||"dxl event";
+    icon: 'bridge.png',
+    align: 'right',
+    label: function () {
+      return this.name || this.topic || 'dxl event'
     },
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? 'node_label_italic' : ''
     },
-    onadd: function() {
+    onadd: function () {
       if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
-        var clientConfigId = '';
-        var configCount = 0;
-        RED.nodes.eachConfig(function(n) {
+        var clientConfigId = ''
+        var configCount = 0
+        RED.nodes.eachConfig(function (n) {
           if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
               (n.type === 'dxl-client')) {
-            clientConfigId = n.id;
-            configCount++;
+            clientConfigId = n.id
+            configCount++
           }
         })
         if (configCount === 1) {
-          this.client = clientConfigId;
+          this.client = clientConfigId
         }
       }
     }
-  });
+  })
 </script>
 
 <script type="text/x-red" data-template-name="dxl-event out">
@@ -136,41 +136,41 @@
 </script>
 
 <script type="text/javascript">
-  RED.nodes.registerType('dxl request',{
+  RED.nodes.registerType('dxl request', {
     category: 'function',
     defaults: {
-      name: {value:""},
-      topic: {value:""},
-      client: {type:"dxl-client", required:true},
-      ret: {value:"txt"}
+      name: {value: ''},
+      topic: {value: ''},
+      client: {type: 'dxl-client', required: true},
+      ret: {value: 'txt'}
     },
-    color: "rgb(231, 231, 174)",
+    color: 'rgb(231, 231, 174)',
     inputs: 1,
     outputs: 1,
-    icon: "white-globe.png",
-    label: function() {
-      return this.name||this.topic||"dxl request";
+    icon: 'white-globe.png',
+    label: function () {
+      return this.name || this.topic || 'dxl request'
     },
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? 'node_label_italic' : ''
     },
-    onadd: function() {
+    onadd: function () {
       if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
-        var clientConfigId = '';
-        var configCount = 0;
-        RED.nodes.eachConfig(function(n) {
+        var clientConfigId = ''
+        var configCount = 0
+        RED.nodes.eachConfig(function (n) {
           if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
               (n.type === 'dxl-client')) {
-            clientConfigId = n.id;
-            configCount++;
+            clientConfigId = n.id
+            configCount++
           }
         })
         if (configCount === 1) {
-          this.client = clientConfigId;
+          this.client = clientConfigId
         }
       }
     }
-  });
+  })
 </script>
 
 <script type="text/x-red" data-template-name="dxl request">
@@ -201,142 +201,143 @@
 </script>
 
 <script type="text/javascript">
-(function() {
+(function () {
   var payloadTypes = [
-    {v:"txt",t:"a UTF-8 string"},
-    {v:"bin",t:"a binary buffer"},
-    {v:"obj",t:"a parsed JSON object"}
-  ];
+    {v: 'txt', t: 'a UTF-8 string'},
+    {v: 'bin', t: 'a binary buffer'},
+    {v: 'obj', t: 'a parsed JSON object'}
+  ]
 
-  RED.nodes.registerType('dxl-service in',{
+  RED.nodes.registerType('dxl-service in', {
     category: 'input',
     defaults: {
-      name: {value:""},
-      serviceType: {value:"", required:true},
-      client: {type:"dxl-client", required:true},
-      rules: {value:[{payloadType:"txt", topic:""}]},
-      outputs: {value:1}
+      name: {value: ''},
+      serviceType: {value: '', required: true},
+      client: {type: 'dxl-client', required: true},
+      rules: {value: [{payloadType: 'txt', topic: ''}]},
+      outputs: {value: 1}
     },
-    color: "#d8bfd8",
+    color: '#d8bfd8',
     inputs: 0,
     outputs: 1,
-    outputLabels: function(index) {
-      var rule = this.rules[index];
-      var label = "";
+    outputLabels: function (index) {
+      var label = ''
+      var rule = this.rules[index]
       if (rule) {
-        return rule.topic;
+        label = rule.topic
       }
+      return label
     },
-    icon: "bridge.png",
-    label: function() {
-      return this.name||this.topic||"dxl service";
+    icon: 'bridge.png',
+    label: function () {
+      return this.name || this.topic || 'dxl service'
     },
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? 'node_label_italic' : ''
     },
-    oneditprepare: function() {
-      var node = this;
-      var outputCount = $("#node-input-outputs").val("{}");
+    oneditprepare: function () {
+      var node = this
+      var outputCount = $('#node-input-outputs').val('{}')
 
-      $("#node-input-rule-container").css('min-height','250px').css('min-width','450px').editableList({
-        addItem: function(container,i,opt) {
+      $('#node-input-rule-container').css('min-height', '250px').css('min-width', '450px').editableList({
+        addItem: function (container, i, opt) {
           if (!opt.hasOwnProperty('r')) {
-            opt.r = {};
+            opt.r = {}
           }
-          var rule = opt.r;
+          var rule = opt.r
           if (!rule.hasOwnProperty('payloadType')) {
-            rule.payloadType = 'txt';
+            rule.payloadType = 'txt'
           }
           if (!opt.hasOwnProperty('i')) {
-            opt._i = Math.floor((0x99999-0x10000)*Math.random()).toString(16);
+            opt._i = Math.floor((0x99999 - 0x10000) * Math.random()).toString(16)
           }
 
-          var row1 = $('<div/>').appendTo(container);
-          var row2 = $('<div/>',{style:"margin-top:8px;"}).appendTo(container);
+          var row1 = $('<div/>').appendTo(container)
+          var row2 = $('<div/>', {style: 'margin-top:8px;'}).appendTo(container)
 
-          $('<div/>',{style:"display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;"})
-              .text("Topic")
-              .appendTo(row1);
-          var topicValue = $('<input/>',{class:"node-input-rule-topic-value",type:"text"}).appendTo(row1);
+          $('<div/>', {style: 'display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;'})
+              .text('Topic')
+              .appendTo(row1)
+          var topicValue = $('<input/>', {class: 'node-input-rule-topic-value', type: 'text'}).appendTo(row1)
 
-          $('<div/>',{style:"display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;"})
-              .text("Payload type")
-              .appendTo(row2);
-          var payloadTypeField = $('<select/>',{style:"width:200px; text-align: center;"}).appendTo(row2);
+          $('<div/>', {style: 'display:inline-block;text-align:right; width:120px; padding-right:10px; box-sizing:border-box;'})
+              .text('Payload type')
+              .appendTo(row2)
+          var payloadTypeField = $('<select/>', {style: 'width:200px; text-align: center;'}).appendTo(row2)
           for (var d in payloadTypes) {
-            payloadTypeField.append($("<option></option>").val(payloadTypes[d].v).text(payloadTypes[d].t));
+            payloadTypeField.append($('<option></option>').val(payloadTypes[d].v).text(payloadTypes[d].t))
           }
 
-          var finalspan = $('<span/>',{style:"float: right;margin-top: 6px;"}).appendTo(row1);
-          finalspan.append(' &#8594; <span class="node-input-rule-index">'+(i+1)+'</span> ');
-          payloadTypeField.val(rule.payloadType);
-          if (typeof rule.topic !== "undefined") {
-            topicValue.val(rule.topic);
+          var finalspan = $('<span/>', {style: 'float: right;margin-top: 6px;'}).appendTo(row1)
+          finalspan.append(' &#8594; <span class="node-input-rule-index">' + (i + 1) + '</span> ')
+          payloadTypeField.val(rule.payloadType)
+          if (typeof rule.topic !== 'undefined') {
+            topicValue.val(rule.topic)
           }
-          payloadTypeField.change();
+          payloadTypeField.change()
 
-          var currentOutputs = JSON.parse(outputCount.val()||"{}");
-          currentOutputs[opt.hasOwnProperty('i')?opt.i:opt._i] = i;
-          outputCount.val(JSON.stringify(currentOutputs));
+          var currentOutputs = JSON.parse(outputCount.val() || '{}')
+          currentOutputs[opt.hasOwnProperty('i') ? opt.i : opt._i] = i
+          outputCount.val(JSON.stringify(currentOutputs))
         },
-        removeItem: function(opt) {
-          var currentOutputs = JSON.parse(outputCount.val()||"{}");
+        removeItem: function (opt) {
+          var currentOutputs = JSON.parse(outputCount.val() || '{}')
           if (opt.hasOwnProperty('i')) {
-            currentOutputs[opt.i] = -1;
+            currentOutputs[opt.i] = -1
           } else {
-            delete currentOutputs[opt._i];
+            delete currentOutputs[opt._i]
           }
-          var rules = $("#node-input-rule-container").editableList('items');
-          rules.each(function(i) {
-            $(this).find(".node-input-rule-index").html(i+1);
-            var data = $(this).data('data');
-            currentOutputs[data.hasOwnProperty('i')?data.i:data._i] = i;
-          });
-          outputCount.val(JSON.stringify(currentOutputs));
+          var rules = $('#node-input-rule-container').editableList('items')
+          rules.each(function (i) {
+            $(this).find('.node-input-rule-index').html(i + 1)
+            var data = $(this).data('data')
+            currentOutputs[data.hasOwnProperty('i') ? data.i : data._i] = i
+          })
+          outputCount.val(JSON.stringify(currentOutputs))
         },
-        sortItems: function(rules) {
-          var currentOutputs = JSON.parse(outputCount.val()||"{}");
-          var rules = $("#node-input-rule-container").editableList('items');
-          rules.each(function(i) {
-            $(this).find(".node-input-rule-index").html(i+1);
-            var data = $(this).data('data');
-            currentOutputs[data.hasOwnProperty('i')?data.i:data._i] = i;
-          });
-          outputCount.val(JSON.stringify(currentOutputs));
+        sortItems: function () {
+          var currentOutputs = JSON.parse(outputCount.val() || '{}')
+          var rules = $('#node-input-rule-container').editableList('items')
+          rules.each(function (i) {
+            $(this).find('.node-input-rule-index').html(i + 1)
+            var data = $(this).data('data')
+            currentOutputs[data.hasOwnProperty('i') ? data.i : data._i] = i
+          })
+          outputCount.val(JSON.stringify(currentOutputs))
         },
         sortable: true,
         removable: true
-      });
+      })
 
-      for (var i=0;i<this.rules.length;i++) {
-        var rule = this.rules[i];
-        $("#node-input-rule-container").editableList('addItem',{r:rule,i:i});
+      for (var i = 0; i < node.rules.length; i++) {
+        var rule = node.rules[i]
+        $('#node-input-rule-container').editableList('addItem', {r: rule, i: i})
       }
     },
-    oneditsave: function() {
-      var rules = $("#node-input-rule-container").editableList('items');
-      var node = this;
-      node.rules = [];
-      rules.each(function(i) {
-        var rule = $(this);
-        var type = rule.find("select").val();
-        var r = {payloadType:type};
-        r.topic = rule.find(".node-input-rule-topic-value").val();
-        node.rules.push(r);
-      });
+    oneditsave: function () {
+      var rules = $('#node-input-rule-container').editableList('items')
+      var node = this
+      node.rules = []
+      rules.each(function () {
+        var rule = $(this)
+        var type = rule.find('select').val()
+        var r = {payloadType: type}
+        r.topic = rule.find('.node-input-rule-topic-value').val()
+        node.rules.push(r)
+      })
     },
-    oneditresize: function(size) {
-      var rows = $("#dialog-form>div:not(.node-input-rule-container-row)");
-      var height = size.height;
-      for (var i=0;i<rows.size();i++) {
-        height -= $(rows[i]).outerHeight(true);
+    oneditresize: function (size) {
+      var rows = $('#dialog-form>div:not(.node-input-rule-container-row)')
+      var height = size.height
+      for (var i = 0; i < rows.size(); i++) {
+        height -= $(rows[i]).outerHeight(true)
       }
-      var editorRow = $("#dialog-form>div.node-input-rule-container-row");
-      height -= (parseInt(editorRow.css("marginTop"))+parseInt(editorRow.css("marginBottom")));
-      $("#node-input-rule-container").editableList('height',height);
+      var editorRow = $('#dialog-form>div.node-input-rule-container-row')
+      height -= (parseInt(editorRow.css('marginTop')) + parseInt(editorRow.css('marginBottom')))
+      $('#node-input-rule-container').editableList('height', height)
     }
-  });
-})();
+  })
+})()
 </script>
 
 <script type="text/x-red" data-template-name="dxl-service in">
@@ -363,40 +364,40 @@
 </script>
 
 <script type="text/javascript">
-  RED.nodes.registerType('dxl-response out',{
+  RED.nodes.registerType('dxl-response out', {
     category: 'output',
     defaults: {
-      name: {value:""},
-      client: {type:"dxl-client", required:true}
+      name: {value: ''},
+      client: {type: 'dxl-client', required: true}
     },
-    color: "#d8bfd8",
+    color: '#d8bfd8',
     inputs: 1,
     outputs: 0,
-    icon: "bridge.png",
-    align: "right",
-    label: function() {
-      return this.name||this.topic||"dxl response";
+    icon: 'bridge.png',
+    align: 'right',
+    label: function () {
+      return this.name || this.topic || 'dxl response'
     },
-    labelStyle: function() {
-      return this.name?"node_label_italic":"";
+    labelStyle: function () {
+      return this.name ? 'node_label_italic' : ''
     },
-    onadd: function() {
+    onadd: function () {
       if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
-        var clientConfigId = '';
-        var configCount = 0;
-        RED.nodes.eachConfig(function(n) {
+        var clientConfigId = ''
+        var configCount = 0
+        RED.nodes.eachConfig(function (n) {
           if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
               (n.type === 'dxl-client')) {
-            clientConfigId = n.id;
-            configCount++;
+            clientConfigId = n.id
+            configCount++
           }
         })
         if (configCount === 1) {
-          this.client = clientConfigId;
+          this.client = clientConfigId
         }
       }
     }
-  });
+  })
 </script>
 
 <script type="text/x-red" data-template-name="dxl-response out">
