--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -46,5 +46,9 @@
 </script>
 
 <script type="text/x-red" data-help-name="dxl-client">
-    <p>DXL client configuration</p>
+    <p>The minimum DXL client configuration only requires a client configuration file and associated certificate and key files that the Node-RED server can access. For more information on obtaining all of the files needed for a DXL client configuration see the <a href="https://opendxl.github.io/opendxl-client-python/pydoc/provisioningoverview.html" target="_blank">provisioning documentation</a> in the OpenDXL Python client SDK.</p>
+    <h3>Details</h3>
+    <p><i>Name</i> is only used for display purposes in the Node-RED user interface.<p>
+    <p><i>Keep alive</i> is the maximum period in seconds between communications with a connected broker. If no other messages are being exchanged, this controls the rate at which the client will send ping messages to the broker.</p>
+    <p><i>Reconnect delay</i> is the delay between retry attempts in seconds.</p>
 </script>
