--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -57,8 +57,45 @@
             <option value="obj">a parsed JSON object</option>
         </select>
     </div>
+    <div class="form-tips">Tip: Leave topic blank if you want to set it via the <code>msg.dxlTopic</code> property</div>
 </script>
 
 <script type="text/x-red" data-help-name="dxl request">
-    <p>Connects to a DXL broker, sends a request containing the msg.payload from the input message to a specific topic, and writes the response received from the request to the payload property in the output message.</p>
+    <p>Sends a request message containing the <code>msg.payload</code> from the input message to a remote DXL service and writes the response received from the request to the output <code>msg.payload</code> property.</p>
+    <p>Request messages are used when invoking a method on a remote service. This communication is one-to-one where a client sends a request to a service instance and in turn receives a response.
+    For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-python/pydoc/dxlclient.message.html">message documentation</a> in the OpenDXL Python client SDK.</p>
+    </p>
+    <h3>Inputs</h3>
+    <dl class="message-properties">
+       <dt>payload <span class="property-type">string | buffer</span></dt>
+       <dd> The application-specific payload of the message.</dd>
+
+       <dt class="optional">dxlTopic <span class="property-type">string</span></dt>
+       <dd> The topic to send the request to.</dd>
+    </dl>
+    <h3>Outputs</h3>
+    <dl class="message-properties">
+       <dt>payload <span class="property-type">string | buffer</span></dt>
+       <dd> The application-specific payload of the response message. Through the <i>Return</i> node property, the node can be configured to set the response payload as a UTF-8 String, an Object parsed from a JSON formatted string, or as a binary Buffer.</dd>
+
+       <dt>dxlResponse <span class="property-type">dxl-client.Response</d></span></dt>
+       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/Response.html" target="_blank">Response</a> or <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html" target="_blank">ErrorResponse</a> object received from the DXL client for the request message.</dd>
+
+       <dt>dxlMessage <span class="property-type">dxl-client.Message</d></span></dt>
+       <dd> The <a href="https://opendxl.github.io/opendxl-client-javascript/Response.html" target="_blank">Response</a> or <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html" target="_blank">ErrorResponse</a> object received from the DXL client for the request message.</dd>
+    </dl>
+    <h3>Details</h3>
+    <p><i>Client</i> is the configuration node for the DXL client through which the request should be made.
+    Click on the pencil icon to add or modify a client configuration.</p>
+    <p><i>Topic</i> is the topic to publish the message to.
+    If the value is empty, the topic will be derived from the input message's <code>msg.dxlTopic</code> property.</p>
+    <p><i>Name</i> is only used for display purposes in the Node-RED user interface.<p>
+    <p><i>Return</i> controls the data type for the <code>msg.payload</code> property in the message injected into a flow.
+    If the value is set to <i>a binary buffer</i>, the raw binary Buffer received in the DXL response payload is forwarded along.
+    If the value is set to <i>a UTF-8 string</i>, the binary Buffer is decoded from UTF-8 octets into a String.
+    If the value is set to <i>a parsed JSON object</i>, the binary Buffer is decoded into a UTF-8 string and parsed as JSON text into an Object.
+    If an error occurs when attempting to convert the binary Buffer of the payload into the desired data type, the current flow is halted with an error.</dd>
+    <p>If an error is received from a broker for the request, the current flow is halted with an error.
+    In the message received by any catch node for the error, the <code>msg.payload</code> property is set to the payload from the DXL error response.
+    If the error returned from the broker contains a DXL <a href="https://opendxl.github.io/opendxl-client-javascript/ErrorResponse.html" target="_blank">ErrorResponse message</a>, the <i>ErrorResponse</i> object is set as the <code>msg.dxlResponse</code> and <code>msg.dxlMessage</code>.</dd>
 </script>
