Add jsdocs and minor name refactoring in DxlClientNode

--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -50,5 +50,5 @@
     <h3>Details</h3>
     <p><i>Name</i> is only used for display purposes in the Node-RED user interface.<p>
     <p><i>Keep alive</i> is the maximum period in seconds between communications with a connected broker. If no other messages are being exchanged, this controls the rate at which the client will send ping messages to the broker.</p>
-    <p><i>Reconnect delay</i> is the delay between retry attempts in seconds.</p>
+    <p><i>Reconnect delay</i> is the delay between connection retry attempts in seconds.</p>
 </script>
