--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -4,7 +4,10 @@
     defaults: {
       name: {value: ''},
       topic: {value: ''},
-      client: {type: 'dxl-client', required: true},
+      client: {type: 'dxl-client',
+        required: false,
+        validate: function () { return DXL.validators.client(this) }
+      },
       returntype: {value: 'txt'}
     },
     color: 'rgb(231, 231, 174)',
@@ -16,22 +19,6 @@
     },
     labelStyle: function () {
       return this.name ? 'node_label_italic' : ''
-    },
-    onadd: function () {
-      if (!this.client && RED.nodes.hasOwnProperty('eachConfig')) {
-        var clientConfigId = ''
-        var configCount = 0
-        RED.nodes.eachConfig(function (n) {
-          if (n.hasOwnProperty('id') && n.hasOwnProperty('type') &&
-              (n.type === 'dxl-client')) {
-            clientConfigId = n.id
-            configCount++
-          }
-        })
-        if (configCount === 1) {
-          this.client = clientConfigId
-        }
-      }
     }
   })
 </script>
