Add DXL button icon and update colors

--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -10,10 +10,10 @@
       },
       returntype: {value: 'txt'}
     },
-    color: 'rgb(231, 231, 174)',
+    color: '#5ccfe2',
     inputs: 1,
     outputs: 1,
-    icon: 'white-globe.png',
+    icon: 'opendxl.png',
     label: function () {
       return this.name || this.topic || 'dxl request'
     },
