--- a/nodes/dxl-response.html
+++ b/nodes/dxl-response.html
@@ -8,10 +8,10 @@
         validate: function () { return DXL.validators.client(this) }
       }
     },
-    color: '#d8bfd8',
+    color: '#5ccfe2',
     inputs: 1,
     outputs: 0,
-    icon: 'bridge.png',
+    icon: 'opendxl.png',
     align: 'right',
     label: function () {
       return this.name || this.topic || 'dxl response'
