--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -18,7 +18,7 @@
         rules: {value: [{payloadType: 'txt', topic: ''}]},
         outputs: {value: 1}
       },
-      color: '#d8bfd8',
+      color: '#5ccfe2',
       inputs: 0,
       outputs: 1,
       outputLabels: function (index) {
@@ -29,7 +29,7 @@
         }
         return label
       },
-      icon: 'bridge.png',
+      icon: 'opendxl.png',
       label: function () {
         return this.name || this.topic || 'dxl service'
       },
