--- a/nodes/dxl-event-in.html
+++ b/nodes/dxl-event-in.html
@@ -10,10 +10,10 @@
       },
       returntype: {value: 'txt'}
     },
-    color: '#d8bfd8',
+    color: '#5ccfe2',
     inputs: 0,
     outputs: 1,
-    icon: 'bridge.png',
+    icon: 'opendxl.png',
     label: function () {
       return this.name || this.topic || 'dxl event'
     },
