Change case for Service Type to type for service node HTML page

--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -147,8 +147,8 @@
         <input type="text" id="node-input-client" placeholder="Client">
     </div>
     <div class="form-row">
-        <label for="node-input-serviceType"><i class="fa fa-tag"></i> Service Type</label>
-        <input type="text" id="node-input-serviceType" placeholder="Service Type">
+        <label for="node-input-serviceType"><i class="fa fa-tag"></i> Service type</label>
+        <input type="text" id="node-input-serviceType" placeholder="Service type">
     </div>
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
@@ -189,7 +189,7 @@
     <p><b>Note:</b> this node does not send a response to the request. The flow must include an DXL response node to complete the request.</p>
     <p><i>Client</i> is the configuration node for the DXL client through which the service registration should be sent and service requests should be received.
     Click on the pencil icon to add or modify a client configuration.</p>
-    <p><i>Service Type</i> is a textual name for the service. This name is supplied to the DXL fabric during service registration.</p>
+    <p><i>Service type</i> is a textual name for the service. This name is supplied to the DXL fabric during service registration.</p>
     <p><i>Name</i> is only used for display purposes in the Node-RED user interface.<p>
     <p>For each output entry:<p>
     <p><i>Topic</i> is the topic to subscribe to for request notifications.</p>
