Move DXL nodes into their own DXL UI category

--- a/nodes/dxl-event-in.html
+++ b/nodes/dxl-event-in.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('dxl-event in', {
-    category: 'input',
+    category: 'dxl',
     defaults: {
       name: {value: ''},
       topic: {value: '', required: true},
