--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('dxl-event out', {
-    category: 'output',
+    category: 'dxl',
     defaults: {
       name: {value: ''},
       topic: {value: ''},
