--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('dxl request', {
-    category: 'function',
+    category: 'dxl',
     defaults: {
       name: {value: ''},
       topic: {value: ''},
