--- a/nodes/dxl-response.html
+++ b/nodes/dxl-response.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   RED.nodes.registerType('dxl-response out', {
-    category: 'output',
+    category: 'dxl',
     defaults: {
       name: {value: ''},
       client: {type: 'dxl-client',
