--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -7,7 +7,7 @@
     ]
 
     RED.nodes.registerType('dxl-service in', {
-      category: 'input',
+      category: 'dxl',
       defaults: {
         name: {value: ''},
         serviceType: {value: '', required: true},
