Update node background color and icon

--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -9,7 +9,7 @@
         validate: function () { return DXL.validators.client(this) }
       }
     },
-    color: '#5ccfe2',
+    color: '#b3d2e3',
     inputs: 1,
     outputs: 0,
     icon: 'opendxl.png',
