--- a/nodes/dxl-request.html
+++ b/nodes/dxl-request.html
@@ -10,7 +10,7 @@
       },
       returnType: {value: 'txt'}
     },
-    color: '#5ccfe2',
+    color: '#b3d2e3',
     inputs: 1,
     outputs: 1,
     icon: 'opendxl.png',
