--- a/nodes/dxl-service.html
+++ b/nodes/dxl-service.html
@@ -18,7 +18,7 @@
         rules: {value: [{payloadType: 'txt', topic: ''}]},
         outputs: {value: 1}
       },
-      color: '#5ccfe2',
+      color: '#b3d2e3',
       inputs: 0,
       outputs: 1,
       outputLabels: function (index) {
