--- a/nodes/dxl-event-in.html
+++ b/nodes/dxl-event-in.html
@@ -10,7 +10,7 @@
       },
       payloadType: {value: 'txt'}
     },
-    color: '#5ccfe2',
+    color: '#b3d2e3',
     inputs: 0,
     outputs: 1,
     icon: 'opendxl.png',
