Minor node and label renaming

--- a/nodes/dxl-client.html
+++ b/nodes/dxl-client.html
@@ -45,7 +45,8 @@
         this.reconnectDelay = 1
         $('#node-config-input-reconnectDelay').val(this.reconnectDelay)
       }
-    }
+    },
+    paletteLabel: 'dxl client'
   })
 </script>
 
