--- a/nodes/dxl-event-out.html
+++ b/nodes/dxl-event-out.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-  RED.nodes.registerType('dxl-event out', {
+  RED.nodes.registerType('dxl-core-event out', {
     category: 'dxl',
     defaults: {
       name: {value: ''},
@@ -15,15 +15,16 @@
     icon: 'opendxl.png',
     align: 'right',
     label: function () {
-      return this.name || this.topic || 'dxl event'
+      return this.name || this.topic || 'dxl event publisher'
     },
     labelStyle: function () {
       return this.name ? 'node_label_italic' : ''
-    }
+    },
+    paletteLabel: 'dxl event publisher'
   })
 </script>
 
-<script type="text/x-red" data-template-name="dxl-event out">
+<script type="text/x-red" data-template-name="dxl-core-event out">
     <div class="form-row">
         <label for="node-input-client"><i class="icon-tag"></i> Client</label>
         <input type="text" id="node-input-client" placeholder="Client">
@@ -39,7 +40,7 @@
     <div class="form-tips">Tip: Leave topic blank if you want to set it via the <code>msg.dxlTopic</code> property</div>
 </script>
 
-<script type="text/x-red" data-help-name="dxl-event out">
+<script type="text/x-red" data-help-name="dxl-core-event out">
     <p>Delivers an event message with the <code>msg.payload</code> from the input message to the DXL fabric.</p>
     <p>Event messages are sent by one publisher and received by one or more recipients that are currently subscribed to the topic associated with the event (otherwise known as one-to-many).
     For more information on message types, how they are delivered to remote clients, etc., see the <a href="https://opendxl.github.io/opendxl-client-python/pydoc/dxlclient.message.html">message documentation</a> in the OpenDXL Python client SDK.</p>
